welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: not found: value ||
		if(nums(y)==6 && nums(y+1)==6)||(nums(y)==6 && nums(y+1)==7) j=j+1
                                              ^